--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3328,5 +3328,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.spirit.absorb.absorbableSoul":{
+        "en":"Absorbable Soul",
+        "fr":"Âmes Absorbable",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
