--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3346,5 +3346,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.spirit.soul.maxLevelReached":{
+        "en":"Max Lv. Reached",
+        "fr":"Nv. Max Atteint",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
