--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2862,7 +2862,7 @@
         "id":""
     },
     "UI.windows.spirit.nospirit.line1":{
-        "en":"You have not equipped a Spiri",
+        "en":"You have not equipped a Spirit",
         "fr":"Vous n'avez pas équipé d'Esprit",
         "es":"",
         "ch":"",
@@ -2934,7 +2934,7 @@
         "id":""
     },
     "UI.windows.spirit.nospirit.line5":{
-        "en":"Most monsters can be changed into Spirits. If you find a Spirit Egg, you can right click it to try to hatch it, but it has a chance to fail.<br> 1) Elite monsters can drop an egg.<br> 2) During instances, the boss and specials monsters can drop an egg.<br> 3) There is a small chance for world bosses to drop ab egg.<br> 4) The rarer the egg, the more powerful it is, and the more luck it has to hatch successfully.",
+        "en":"Most monsters can be changed into Spirits. If you find a Spirit Egg, you can right click it to try to hatch it, but it has a chance to fail.<br> 1) Elite monsters can drop an egg.<br> 2) During instances, the boss and specials monsters can drop an egg.<br> 3) There is a small chance for world bosses to drop an egg.<br> 4) The rarer the egg, the more powerful it is, and the more luck it has to hatch successfully.",
         "fr":"La grande majorité de monstres peuvent se transformer en Esprit. Si vous trouvez un Oeuf d'Esprit, il vous suffit de faire un clic droit pour l'ouvrir et essayer d'en récupérer son essence.<br> 1) Les monstres élite peuvent laisser tomber un oeuf comme butin.<br> 2) Au cours des instances, le boss ou les monstres spéciaux peuvent laisser tomber des oeuf comme butin.<br> 3) Il y a aussi une petite probabilité pour que les Boss du Monde laissent des oeufs comme butin.<br> 4) Plus un oeuf est rare, plus l'Esprit qu'il contient est puissant, et plus il auraa de chance d'être récupéré avec succès.",
         "es":"",
         "ch":"",
