--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3527,6 +3527,60 @@
         "th":"",
         "id":""
     },
+    "item.3055.name":{
+        "en":"[Spirit Egg] Poacher",
+        "fr":"",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.3056.name":{
+        "en":"[Spirit Egg] Desert Raider",
+        "fr":"",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.3057.name":{
+        "en":"[Spirit Egg] Rampaging Treasure Seeker",
+        "fr":"",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.4000.name":{
         "en":"Pudding Slime",
         "fr":"",
