--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -64,7 +64,7 @@
         "de":"Magischer Blitz",
         "jp":"",
         "pt":"",
-        "vi":"Cầu ma thuật",
+        "vi":"Cầu ma pháp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -442,7 +442,7 @@
         "de":"Magische Beherrschung",
         "jp":"",
         "pt":"",
-        "vi":"Kiểm soát ma thuật",
+        "vi":"Thống trị ma pháp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -604,7 +604,7 @@
         "de":"Frosthauch",
         "jp":"",
         "pt":"",
-        "vi":"Gầm băng giá",
+        "vi":"Hơi thở băng giá",
         "ar":"",
         "it":"",
         "pl":"",
@@ -658,7 +658,7 @@
         "de":"Dreifachschuss",
         "jp":"",
         "pt":"",
-        "vi":"Triple Shot",
+        "vi":"Tam liên kích tiễn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -766,7 +766,7 @@
         "de":"Adlerauge",
         "jp":"",
         "pt":"",
-        "vi":"Eagle Eye",
+        "vi":"Ưng nhãn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -820,7 +820,7 @@
         "de":"Geladener Schuss",
         "jp":"",
         "pt":"",
-        "vi":"Charged Shot",
+        "vi":"Tên công phá",
         "ar":"",
         "it":"",
         "pl":"",
@@ -874,7 +874,7 @@
         "de":"Eile",
         "jp":"",
         "pt":"",
-        "vi":"Tăng tốc",
+        "vi":"Gia tốc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -928,7 +928,7 @@
         "de":"Multi-Pfeil",
         "jp":"",
         "pt":"",
-        "vi":"Multi-Arrow",
+        "vi":"Loạn tiễn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -982,7 +982,7 @@
         "de":"Meisterschütze",
         "jp":"",
         "pt":"",
-        "vi":"Crack Shot",
+        "vi":"Người cung hợp nhất",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1198,7 +1198,7 @@
         "de":"Zielsuchpfeil",
         "jp":"",
         "pt":"",
-        "vi":"Homing Arrow",
+        "vi":"Truy kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1216,7 +1216,7 @@
         "de":"Schießt sofort mehrere Zielsuchpfeile auf ein einzelnes Ziel und verursacht hohen Schaden.",
         "jp":"",
         "pt":"",
-        "vi":"Bắn nhiều mũi tên vào một mục tiêu,gây sát thương lớn.",
+        "vi":"Bắn nhiều mũi tên vào một mục tiêu, gây sát thương lớn.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1252,7 +1252,7 @@
         "de":"Einschuss",
         "jp":"",
         "pt":"",
-        "vi":"Impact Shot",
+        "vi":"Giật bắn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1468,7 +1468,7 @@
         "de":"Aufschlag",
         "jp":"",
         "pt":"",
-        "vi":"Ném",
+        "vi":"Quét",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1522,7 +1522,7 @@
         "de":"Einkerbung",
         "jp":"",
         "pt":"",
-        "vi":"Đánh chấn động",
+        "vi":"Xung kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1576,7 +1576,7 @@
         "de":"Kriegsschrei",
         "jp":"",
         "pt":"",
-        "vi":"Gào thét chiến đấu",
+        "vi":"Gầm thét",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1630,7 +1630,7 @@
         "de":"Stoßwelle",
         "jp":"",
         "pt":"",
-        "vi":"Kiếm sóng dọc",
+        "vi":"Sóng xung kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2044,7 +2044,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hóa vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2062,7 +2062,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Một phép thuật màu nhiệm biến đổi quái vật thành năng lượng. Chỉ có thể sử dụng đối với quái vật có chỉ số không vượt quá người chơi. ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2098,7 +2098,7 @@
         "de":"Prüfung der Ausdauer",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc thử nghiệm chịu đựng",
+        "vi":"Rèn luyện sức chịu đựng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2134,7 +2134,7 @@
         "de":"Prüfung der Kraft",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc thử nghiệm sức mạnh",
+        "vi":"Rèn luyện sức mạnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2152,7 +2152,7 @@
         "de":"Erhöht den Angriff.<br>Passiv. Erhöht {0} Angriff.",
         "jp":"",
         "pt":"",
-        "vi":"Tăng tấn công. <br> Bị động. Tăng {0} ATK",
+        "vi":"Tăng sức tấn công. <br> Bị động. Tăng {0} ATK",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2170,7 +2170,7 @@
         "de":"Prüfung der Gesundheit",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc thử nghiệm thể chất",
+        "vi":"Rèn luyện thể chất",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2188,7 +2188,7 @@
         "de":"Erhöht die Gesundheit.<br>Passiv. Erhöht {0} Lebenspunkte.",
         "jp":"",
         "pt":"",
-        "vi":"Tăng sức khỏe.<br>Bị động. Tăng {0} HP.",
+        "vi":"Tăng sinh lực.<br>Bị động. Tăng {0} HP.",
         "ar":"",
         "it":"",
         "pl":"",
