--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3364,5 +3364,131 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.daily-quest-list.title":{
+        "en":"Get Daily Quest",
+        "fr":"Obtenir les Quête Quotidienne",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.daily-quest-list.available":{
+        "en":"Available Daily Quest List",
+        "fr":"Quête Quotidienne Disponibles",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.daily-quest-list.renewed":{
+        "en":"Renewed Quests",
+        "fr":"Quêtes Renouvelées",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.daily-quest-list.btn.refresh":{
+        "en":"Refresh List",
+        "fr":"Rafraichir la Liste",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.daily-quest-list.btn.replace":{
+        "en":"Replace Quests",
+        "fr":"Remplacer les Quêtes",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.daily-quest-list.btn.receive":{
+        "en":"Receive All",
+        "fr":"Tout Recevoir",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.daily-quest-list.receive-warning":{
+        "en":"Accepting this quests will replace all the accepted daily quests you haven't completed yet.",
+        "fr":"Accepter ces quêtes remplacera toutes les quêtes quotidiennes acceptées que vous n'avez pas encore terminées.",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
