--- a/Translation/item.json
+++ b/Translation/item.json
@@ -6712,5 +6712,77 @@
         "pl":"",
         "th":"",
         "id":"Semanggi berdaun empat"
+    },
+    "item.41000.name":{
+        "en":"Daily Refresh",
+        "fr":"Rafraichisseur de quêtes",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41001.name":{
+        "en":"Quest Handbook",
+        "fr":"Manuel de quête",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41002.name":{
+        "en":"Revival",
+        "fr":"Pierre de résurrection",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41002.name":{
+        "en":"Mini Teleport Crystal",
+        "fr":"Petit cristal de téléportation",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
