--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4643,6 +4643,42 @@
         "th":"",
         "id":""
     },
+    "item.5000.name":{
+        "en":"Chain Mail M",
+        "fr":"Cotte de mailles H",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5001.name":{
+        "en":"Chain Mail F",
+        "fr":"Cotte de mailles F",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.6000.name":{
         "en":"Christmas Hat B",
         "fr":"Chapeau de Noël B",
