--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3232,7 +3232,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Độ Sinh Triển",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3250,7 +3250,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Kĩ năng thiên phú",
+        "vi":"Kĩ năng thiên phú {0}",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3376,7 +3376,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhận Nhiệm Vụ Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3394,7 +3394,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Danh Sách Nhiệm Vụ Ngày Khả Dụng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3412,7 +3412,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhiệm vụ Lặp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3430,7 +3430,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm Mới Danh Sách",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3448,7 +3448,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhiệm Vụ Thế",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3466,7 +3466,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhận Hết",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3484,7 +3484,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhận các nhiệm vụ này sẽ thay thế toàn bộ nhiệm vụ ngày hiện tại chưa được hoàn thành.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3502,7 +3502,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm mới nhiệm vụ sẽ tốn {0}.Chấp nhận làm mới?",
         "ar":"",
         "it":"",
         "pl":"",
