--- a/Translation/general.json
+++ b/Translation/general.json
@@ -820,7 +820,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đặc Chủng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -838,7 +838,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trưởng Đặc Chủng",
         "ar":"",
         "it":"",
         "pl":"",
