--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -64,7 +64,7 @@
         "de":"Erforderliches Level",
         "jp":"",
         "pt":"",
-        "vi":"Yêu cầu Lv",
+        "vi":"Yêu Cầu Cấp Độ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -82,7 +82,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp Tinh Linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -100,7 +100,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp Linh Hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -118,7 +118,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thiên Phú",
         "ar":"",
         "it":"",
         "pl":"",
@@ -136,7 +136,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tài Năng Tinh Linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -154,7 +154,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Điểm Còn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -208,7 +208,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Số Vật Mang Tối Đa",
         "ar":"",
         "it":"",
         "pl":"",
