--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2764,7 +2764,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Bọ Tíí Hon",
+        "vi":"[Linh Trứng] Bọ Tí Hon",
         "ar":"",
         "it":"",
         "pl":"",
