--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3052,7 +3052,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Potpent",
+        "vi":"[Linh Trứng] Rắn Niêu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4096,7 +4096,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Potpent",
+        "vi":"Rắn Niêu",
         "ar":"",
         "it":"",
         "pl":"",
