--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3250,7 +3250,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Nham Thân Cận",
+        "vi":"[Linh Trứng] Nham Sứ Ma",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4294,7 +4294,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nham Thân Cận",
+        "vi":"Nham Sứ Ma",
         "ar":"",
         "it":"",
         "pl":"",
