--- a/Translation/item.json
+++ b/Translation/item.json
@@ -622,7 +622,7 @@
         "de":"Eiserner Langbogen",
         "jp":"",
         "pt":"",
-        "vi":"Cung Sắt",
+        "vi":"Cung Tay Sắt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -784,7 +784,7 @@
         "de":"Anfängerstab",
         "jp":"",
         "pt":"",
-        "vi":"Gậy cũ",
+        "vi":"Gậy Môn Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -802,7 +802,7 @@
         "de":"Zauberstab",
         "jp":"",
         "pt":"",
-        "vi":"Gậy của thuật sĩ",
+        "vi":"Gậy Pháp Sư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -838,7 +838,7 @@
         "de":"Scharlachroter Zauberstab",
         "jp":"",
         "pt":"",
-        "vi":"Trượng Scarlet",
+        "vi":"Trượng Đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -856,7 +856,7 @@
         "de":"Zauberstab des Waldes",
         "jp":"",
         "pt":"",
-        "vi":"Trượng Forest",
+        "vi":"Trượng Đại Rừng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -892,7 +892,7 @@
         "de":"Heiliger Zauberstab",
         "jp":"",
         "pt":"",
-        "vi":"Trượng Halo",
+        "vi":"Trượng Hào Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -928,7 +928,7 @@
         "de":"Erkorener Zauberstab",
         "jp":"",
         "pt":"",
-        "vi":"Trượng Destined",
+        "vi":"Trượng Định Mệnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -982,7 +982,7 @@
         "de":"Anfänger Hemd",
         "jp":"",
         "pt":"",
-        "vi":"Áo Disciple",
+        "vi":"Áo Môn Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1018,7 +1018,7 @@
         "de":"Viper Rüstung",
         "jp":"",
         "pt":"",
-        "vi":"Áo Giáp Viper",
+        "vi":"Áo Giáp Rắn Độc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1036,7 +1036,7 @@
         "de":"Nachtschleicher",
         "jp":"",
         "pt":"",
-        "vi":"Áo Giáp bóng đêm",
+        "vi":"Áo Giáp Bóng đêm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1054,7 +1054,7 @@
         "de":"Marionettenrüstung",
         "jp":"",
         "pt":"",
-        "vi":"Áo Giáp Puppet",
+        "vi":"Áo Giáp Bù Nhìn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1126,7 +1126,7 @@
         "de":"Erkorene Rüstung",
         "jp":"",
         "pt":"",
-        "vi":"Áo Giáp Destined",
+        "vi":"Áo Giáp Định Mệnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1180,7 +1180,7 @@
         "de":"Haarband des Anfängers",
         "jp":"",
         "pt":"",
-        "vi":"Băng đô Disciple",
+        "vi":"Băng Đô Môn Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1234,7 +1234,7 @@
         "de":"Pharao Maske",
         "jp":"",
         "pt":"",
-        "vi":"Mũ Pharaoh",
+        "vi":"Mũ Pha-ra-ông",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1252,7 +1252,7 @@
         "de":"Helm der Natur",
         "jp":"",
         "pt":"",
-        "vi":"Mũ Nature",
+        "vi":"Mũ Thiên Nhiên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1288,7 +1288,7 @@
         "de":"Heiliger Helm",
         "jp":"",
         "pt":"",
-        "vi":"Mũ Halo",
+        "vi":"Mũ Hào Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1324,7 +1324,7 @@
         "de":"Erkorener Helm",
         "jp":"",
         "pt":"",
-        "vi":"Mũ Destined",
+        "vi":"Mũ Định Mệnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1396,7 +1396,7 @@
         "de":"Schönes Siegel",
         "jp":"",
         "pt":"",
-        "vi":"Nhẫn ngọt ngào",
+        "vi":"Ấn Nhẵn Ngọt Ngào",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1414,7 +1414,7 @@
         "de":"Gottloses Fingerband",
         "jp":"",
         "pt":"",
-        "vi":"Nhẫn của Sauron",
+        "vi":"Vòng Tay Độc Ác",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1432,7 +1432,7 @@
         "de":"Strahlender Ring",
         "jp":"",
         "pt":"",
-        "vi":"Nhẫn Shining",
+        "vi":"Nhẫn Chói Sáng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1450,7 +1450,7 @@
         "de":"Geerbtes Siegel",
         "jp":"",
         "pt":"",
-        "vi":"Nhẫn Inherited",
+        "vi":"Nhẫn Thừa Hưởng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1486,7 +1486,7 @@
         "de":"Heiliger Ring",
         "jp":"",
         "pt":"",
-        "vi":"Nhẫn Halo",
+        "vi":"Nhẫn Hào Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1522,7 +1522,7 @@
         "de":"Erkorenes Band",
         "jp":"",
         "pt":"",
-        "vi":"Nhẫn Destined",
+        "vi":"Nhẫn Định Mệnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1576,7 +1576,7 @@
         "de":"Holzarmband",
         "jp":"",
         "pt":"",
-        "vi":"Vòng cổ bằng gỗ",
+        "vi":"Vòng Cổ Bằng Gỗ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1594,7 +1594,7 @@
         "de":"Silbernes Amulett",
         "jp":"",
         "pt":"",
-        "vi":"Bùa hộ mệnh bạc",
+        "vi":"Bùa Hộ Mệnh bạc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1612,7 +1612,7 @@
         "de":"herzhafter Klunker",
         "jp":"",
         "pt":"",
-        "vi":"Dây chuyền hoàn hảo",
+        "vi":"Dây Chuyền Thành Tâm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1630,7 +1630,7 @@
         "de":"Feuerkern Halzkette",
         "jp":"",
         "pt":"",
-        "vi":"Vòng cổ lõi lửa",
+        "vi":"Vòng Cổ Lõi Lửa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1648,7 +1648,7 @@
         "de":"Traumhimmel Halskette",
         "jp":"",
         "pt":"",
-        "vi":"Dây chuyền Dreamsky",
+        "vi":"Dây chuyền Mơ Mây",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1684,7 +1684,7 @@
         "de":"Heilige Halskette",
         "jp":"",
         "pt":"",
-        "vi":"Dây chuyền Halo",
+        "vi":"Dây chuyền Hào Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1720,7 +1720,7 @@
         "de":"Erkorene Halskette",
         "jp":"",
         "pt":"",
-        "vi":"Dây chuyền Destined",
+        "vi":"Dây chuyền Định Mệnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1774,7 +1774,7 @@
         "de":"Galoschen des Lehrlings",
         "jp":"",
         "pt":"",
-        "vi":"Giày Disciple",
+        "vi":"Giày Môn Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1792,7 +1792,7 @@
         "de":"Fantastische Sandalen",
         "jp":"",
         "pt":"",
-        "vi":"Giày Fantastic",
+        "vi":"Giày Tuyệt Diệu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1810,7 +1810,7 @@
         "de":"Teuflische Stiefel",
         "jp":"",
         "pt":"",
-        "vi":"Boot Ác Quỷ",
+        "vi":"Giày Ác Quỷ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1846,7 +1846,7 @@
         "de":"Herrscher Stiefel",
         "jp":"",
         "pt":"",
-        "vi":"Giày Emperor",
+        "vi":"Giày Hoàng Đế",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1882,7 +1882,7 @@
         "de":"Heilige Stiefel",
         "jp":"",
         "pt":"",
-        "vi":"Giày Halo",
+        "vi":"Giày Hào Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1918,7 +1918,7 @@
         "de":"Erkorene Stiefel",
         "jp":"",
         "pt":"",
-        "vi":"Giày Destined",
+        "vi":"Giày Định Mệnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1972,7 +1972,7 @@
         "de":"Gürtel des Lehrlings",
         "jp":"",
         "pt":"",
-        "vi":"Đai Disciple",
+        "vi":"Đai Môn Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2044,7 +2044,7 @@
         "de":"Gürtel des Vipergeistes",
         "jp":"",
         "pt":"",
-        "vi":"Đai Viper",
+        "vi":"Đai Rắn Độc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2080,7 +2080,7 @@
         "de":"Heiliger Gürtel",
         "jp":"",
         "pt":"",
-        "vi":"Đai Halo",
+        "vi":"Đai Hào Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2116,7 +2116,7 @@
         "de":"Erkorener Gürtel",
         "jp":"",
         "pt":"",
-        "vi":"Đai Destined",
+        "vi":"Đai Định Mệnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2206,7 +2206,7 @@
         "de":"Regenbogen Umhang",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng cầu vồng",
+        "vi":"Áo Choàng Cầu Vồng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2224,7 +2224,7 @@
         "de":"Sanfter Umhang",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng Gentle",
+        "vi":"Áo Choàng Cao Quý",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2242,7 +2242,7 @@
         "de":"Feuerseelenumhang",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng Firesoul",
+        "vi":"Áo Choàng Hỏa Linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2278,7 +2278,7 @@
         "de":"Heiliges Cape",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng Halo",
+        "vi":"Áo Choàng Hào Qunag",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2314,7 +2314,7 @@
         "de":"Erkorenes Cape",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng Destined",
+        "vi":"Áo Choàng Định Mệnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2368,7 +2368,7 @@
         "de":"Dünne Handschuhe",
         "jp":"",
         "pt":"",
-        "vi":"Găng tay da",
+        "vi":"Găng Tay Da",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2386,7 +2386,7 @@
         "de":"Gehärtete Handschuhe",
         "jp":"",
         "pt":"",
-        "vi":"Găng tay đen",
+        "vi":"Găng Tay Da Cứng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2404,7 +2404,7 @@
         "de":"Lilane Handschuhe",
         "jp":"",
         "pt":"",
-        "vi":"Găng tay tím",
+        "vi":"Găng Tay Tím",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2422,7 +2422,7 @@
         "de":"Mumienhüllen",
         "jp":"",
         "pt":"",
-        "vi":"Găng tay xác ướp",
+        "vi":"Găng Tay Xác Ướp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2440,7 +2440,7 @@
         "de":"Geschickte Handschuhe",
         "jp":"",
         "pt":"",
-        "vi":"Găng tay Dole",
+        "vi":"Găng Tay Chia Phận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2476,7 +2476,7 @@
         "de":"Heilige Hüllen",
         "jp":"",
         "pt":"",
-        "vi":"Găng tay Halo",
+        "vi":"Găng Tay Hào Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2512,7 +2512,7 @@
         "de":"Erkorene Handschuhe",
         "jp":"",
         "pt":"",
-        "vi":"Găng tay Destined",
+        "vi":"Găng tay Định Mệnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3250,7 +3250,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Nham Sứ Ma",
+        "vi":"[Linh Trứng] Nham Thân Cận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4294,7 +4294,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nham Sứ Ma",
+        "vi":"Nham Thân Cận",
         "ar":"",
         "it":"",
         "pl":"",
